# thesis-ml

./: .gitignore  blank.html  index.html  readme.me  result_list.json  server.py
linear-regression/app/python/: main.py
linear-regression/app/rust_wasm/: Cargo.toml
linear-regression/app/rust_wasm/pkg/: rust_wasm.d.ts  rust_wasm.js  rust_wasm_bg.wasm  rust_wasm_bg.wasm.d.ts
linear-regression/app/rust_wasm/src/: lib-linfa.rs  lib-test.rs  lib.rs  rust_wasm_app.js
linear-regression/app/tensorflow_js/: tensorflow_js_app.js
linear-regression/datasets/house_price/: dataset.txt  sample_10%.csv  sample_100%.csv  sample_50%.csv  sampling.py
linear-regression/plot/: main.py
linear-regression/training_result/: metric.csv  metric2.csv
linear-regression/training_result/python_gpu/: python_gpu_sample_10%.json
linear-regression/training_result/rust_wasm_cpu/: rust_wasm_cpu_sample_10%.json
linear-regression/training_result/tensorflow_js_wasm/: tensorflow_js_wasm_sample_10%.json
linear_regression/app/python/: linear_regression.py
linear_regression/app/tensorflow_js/: tensorflow_js_app.js
linear_regression/plot/: linear_regression_plot.py
linear_regression/training_result/: metric.csv  pythonpython_gpu_sample_10%.json
neural-network/app/python/: main.py
neural-network/datasets/: mnist_test_labels.json  mnist_train_labels.json
neural-network/plot/: main.py
neural-network/training_result/: metric.csv
neural_network/datasets/: .gitignore
neural_network/plot/: neural_network_plot.py
neural_network/training_result/: pythonpython_gpu_sample_10%.json
(+326 files in other folders)
