[package]
name = "rust_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3", features = ["console", "Window", "Performance"] }
nabla-ml = "=0.4.6"
getrandom = { version = "0.2", features = ["js","wasm-bindgen"] }  



ndarray = "0.16.1"